# blood-on-the-clocktower-discord-bot

./: README.md
assets/: Logo Nightly.afdesign  Logo.afdesign  Setup Photo.afdesign
botc-bot/: Cargo.toml
botc-bot/games/: .~lock.trouble_brewing.csv#  bad_moon_rising.csv  sects_and_violets.csv  trouble_brewing.csv
botc-bot/src/: banners.rs  games.rs  main.rs
botc-bot/src/games/: .~lock.trouble_brewing.csv#  trouble_brewing.csv
legal/: privacy-policy.md  terms-of-service.md
